Bug 1207943 - Fix an assert in MacroAssembler::guardObjectType. r=bhackett